# cmake-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  build_development.sh  build_release.sh  update.sh
cmake/: Dependency.cmake  DependencyCreator.cmake  Headers.cmake  InSourceError.cmake  InstallConfig.cmake  Resources.cmake  Sources.cmake  TargetCreator.cmake  TargetInstaller.cmake
cmake/Base/: Check.cmake  CompileCommands.cmake  Message.cmake  Naming.cmake  Path.cmake  Property.cmake  String.cmake  Variable.cmake
cmake/Install/: Application.cmake  Executable.cmake  Library.cmake
headers/calculator/: calculator.h
sources/: main.cc
sources/calculator/: calculator.cc
tests/: CMakeLists.txt
tests/sources/calculator/: calculator_test.cc
